--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "stylelint \"(public|assets)/**/*.(scss|html|ejs])\""
+    "lint": "stylelint \"assets/**/*.(scss|html|ejs)\""
   },
   "devDependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
