--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,15 +10,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
+        continue-on-error: false
 
       - name: SCSS Lint
         uses: actions-hub/stylelint@v1.1.3
+        continue-on-error: true
         env:
           INDENT_SPACE: 2
           PATTERN: "./assets/**/*.scss"
           CONFIG_PATH: ./.stylelintrc.json
       - name: EJS Lint
         uses: actions-hub/stylelint@v1.1.3
+        continue-on-error: true
         env:
           INDENT_SPACE: 2
           PATTERN: "./templates/**/*.ejs"
