--- a/package.json
+++ b/package.json
@@ -15,11 +15,15 @@
     "lint": "stylelint \"assets/**/*.(scss|html|ejs)\""
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.16.11",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@rollup/plugin-commonjs": "^21.0.2",
+    "@types/ejs": "^3.1.0",
     "@types/node": "^17.0.21",
     "autoprefixer": "^10.4.2",
+    "babel": "^6.23.0",
+    "ejs": "^3.1.6",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.7",
     "postcss-html": "^1.3.0",
@@ -35,7 +39,11 @@
     "ts-node": "^10.6.0",
     "typescript": "^4.5.4",
     "vite": "^2.8.0",
+    "vite-plugin-babel": "^1.0.0",
+    "vite-plugin-checker": "^0.4.2",
+    "vite-plugin-html": "3.1.0",
     "vite-plugin-image-presets": "^0.3.1",
-    "vite-plugin-imagemin": "^0.6.1"
+    "vite-plugin-imagemin": "^0.6.1",
+    "vite-plugin-pwa": "^0.11.13"
   }
 }
