--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@fullhuman/postcss-purgecss": "^4.1.3",
     "@rollup/plugin-commonjs": "^21.0.2",
+    "@types/dotenv-flow": "^3.2.0",
     "@types/ejs": "^3.1.0",
     "@types/node": "^17.0.21",
     "autoprefixer": "^10.4.2",
     "babel": "^6.23.0",
+    "dotenv-flow": "^3.2.0",
     "ejs": "^3.1.6",
     "nodemon": "^2.0.15",
     "postcss": "^8.4.7",
