--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "dotenv-flow": "^3.2.0",
     "ejs": "^3.1.6",
     "nodemon": "^2.0.15",
+    "normalize-css": "^2.3.1",
     "postcss": "^8.4.7",
     "postcss-html": "^1.3.0",
     "postcss-load-config": "^3.1.3",
