--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "preview": "vite preview",
-    "lint": "stylelint \"assets/**/*.(scss|html|ejs)\""
+    "lint": "stylelint \"assets/**/*.(scss|html|ejs)\"",
+    "lint:html": "./scripts/w3c",
+    "lint:html:watch": "nodemon --watch dist/index.html --exec ./scripts/w3c "
   },
   "devDependencies": {
+    "@babel/core": "^7.17.9",
     "@babel/preset-env": "^7.16.11",
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@fullhuman/postcss-purgecss": "^4.1.3",
@@ -44,7 +47,6 @@
     "vite-plugin-checker": "^0.4.2",
     "vite-plugin-html": "3.1.0",
     "vite-plugin-image-presets": "^0.3.1",
-    "vite-plugin-imagemin": "^0.6.1",
-    "vite-plugin-pwa": "^0.11.13"
+    "vite-plugin-imagemin": "^0.6.1"
   }
 }
