--- a/package.json
+++ b/package.json
@@ -26,14 +26,18 @@
     "@types/node": "^17.0.21",
     "autoprefixer": "^10.4.2",
     "babel-cli": "^6.26.0",
+    "css": "^3.0.0",
     "ejs": "^3.1.6",
+    "extend": "^3.0.2",
     "nodemon": "^2.0.15",
     "normalize-css": "^2.3.1",
     "postcss": "^8.4.7",
     "postcss-html": "^1.3.0",
     "postcss-load-config": "^3.1.3",
+    "postcss-rem2px": "^1.1.4",
     "postcss-scss": "^4.0.3",
     "prettier": "^2.5.1",
+    "rollup": "^2.72.0",
     "sass": "^1.49.9",
     "stylelint": "^14.5.3",
     "stylelint-config-html": "^1.0.0",
@@ -45,8 +49,12 @@
     "vite": "^2.8.0",
     "vite-plugin-babel": "^1.0.0",
     "vite-plugin-checker": "^0.4.2",
+    "vite-plugin-fonts": "^0.3.0",
     "vite-plugin-html": "3.1.0",
     "vite-plugin-image-presets": "^0.3.1",
     "vite-plugin-imagemin": "^0.6.1"
+  },
+  "peerDependencies": {
+    "rollup": "^2.72.0"
   }
 }
